--- a/.github/workflows/linux-build.yml
+++ b/.github/workflows/linux-build.yml
@@ -13,16 +13,23 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v3
 
+      - name: Update dependency list
+        run: sudo apt-get update
+
       - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install --assume-yes --quiet autoconf-archive libboost-test-dev libsdl2-dev
+        run: >-
+          sudo apt-get install
+          --assume-yes
+          --quiet
+          autoconf-archive
+          libboost-test-dev
+          libsdl2-dev
 
       - name: Run autogen.sh
         run: ./autogen.sh
 
       - name: Configure build
-        run: |
+        run: |-
           mkdir build
           cd build
           ../configure
