--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -28,17 +28,27 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Initialize CodeQL
-        uses: github/codeql-action/init@v1
+        uses: github/codeql-action/init@v2
         with:
           languages: ${{ matrix.language }}
 
+      - name: Update dependency list
+        run: sudo apt-get update
+
+      - name: Install dependencies
+        run: >-
+          sudo apt-get install
+          --assume-yes
+          --quiet
+          autoconf-archive
+          libboost-test-dev
+          libsdl2-dev
+
       - name: Build
-        run: |
-          sudo apt-get update
-          sudo apt-get install --assume-yes --quiet autoconf-archive libboost-test-dev libsdl2-dev
+        run: |-
           ./autogen.sh
           ./configure
           make --jobs=$((($(nproc) * 15) / 10))
 
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v1
+      - name: Perform CodeQL analysis
+        uses: github/codeql-action/analyze@v2
