--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -18,10 +18,18 @@ jobs:
       COVERAGE_REPORTS_PATH: ${{ github.workspace }}/coverage.xml
 
     steps:
+      - name: Update dependency list
+        run: sudo apt-get update
+
       - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install --assume-yes --quiet autoconf-archive gcovr libboost-test-dev libsdl2-dev
+        run: >-
+          sudo apt-get install
+          --assume-yes
+          --quiet
+          autoconf-archive
+          gcovr
+          libboost-test-dev
+          libsdl2-dev
 
       - name: Check out repository
         uses: actions/checkout@v3
@@ -29,12 +37,13 @@ jobs:
           fetch-depth: 0
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
           java-version: 17
+          distribution: microsoft
 
       - name: Cache SonarCloud packages
-        uses: actions/cache@v1
+        uses: actions/cache@v3
         with:
           path: sonarscanner_cache
           key: ${{ runner.os }}-sonar
@@ -43,7 +52,7 @@ jobs:
       - name: Download and set up sonar-scanner
         env:
           SONAR_SCANNER_DOWNLOAD_URL: https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-${{ env.SONAR_SCANNER_VERSION }}-linux.zip
-        run: |
+        run: |-
           mkdir --parents $HOME/.sonar
           curl --silent --show-error --location --output $HOME/.sonar/sonar-scanner.zip ${{ env.SONAR_SCANNER_DOWNLOAD_URL }}
           unzip -o $HOME/.sonar/sonar-scanner.zip -d $HOME/.sonar/
@@ -52,18 +61,18 @@ jobs:
       - name: Download and set up build-wrapper
         env:
           BUILD_WRAPPER_DOWNLOAD_URL: ${{ env.SONAR_SERVER_URL }}/static/cpp/build-wrapper-linux-x86.zip
-        run: |
+        run: |-
           curl --silent --show-error --location --output $HOME/.sonar/build-wrapper-linux-x86.zip ${{ env.BUILD_WRAPPER_DOWNLOAD_URL }}
           unzip -o $HOME/.sonar/build-wrapper-linux-x86.zip -d $HOME/.sonar/
           echo "$HOME/.sonar/build-wrapper-linux-x86" >> $GITHUB_PATH
 
       - name: Run build-wrapper
-        run: |
+        run: |-
           ./autogen.sh
           ./configure --enable-code-coverage
           build-wrapper-linux-x86-64 \
-          --out-dir ${{ env.BUILD_WRAPPER_OUT_DIR }} \
-          make clean all check
+            --out-dir ${{ env.BUILD_WRAPPER_OUT_DIR }} \
+            make clean all check
 
       - name: Run tromino
         run: ./src/tromino 2> /dev/null || true
@@ -75,7 +84,7 @@ jobs:
         run: ./src/tromino 4 2 3
 
       - name: Run gcovr
-        run: >
+        run: >-
           gcovr
           --exclude=./test
           --exclude=/usr/include
@@ -87,7 +96,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: >
+        run: >-
           sonar-scanner
           --define sonar.host.url="${{ env.SONAR_SERVER_URL }}"
           --define sonar.cfamily.build-wrapper-output="${{ env.BUILD_WRAPPER_OUT_DIR }}"
