--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -1,10 +1,11 @@
-name: CodeQL
+name: CodeQL analysis
 
 on:
   pull_request:
   push:
   schedule:
     - cron: 10 22 * * 5
+  workflow_dispatch:
 
 jobs:
   analyze:
