ci(GitHub) Harden Windows CI permissions

--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -5,6 +5,9 @@ on:
   push:
   workflow_dispatch:
 
+permissions:
+  contents: read
+
 env:
   SOLUTION_FILE_PATH: msbuild\TrominoPuzzle.sln
   BUILD_CONFIGURATION: Release
