--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -53,19 +53,40 @@ jobs:
       - name: Download and set up sonar-scanner
         env:
           SONAR_SCANNER_DOWNLOAD_URL: https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-${{ env.SONAR_SCANNER_VERSION }}-linux.zip
-        run: |-
+        run: >-
           mkdir --parents $HOME/.sonar
-          curl --silent --show-error --location --output $HOME/.sonar/sonar-scanner.zip ${{ env.SONAR_SCANNER_DOWNLOAD_URL }}
-          unzip -o $HOME/.sonar/sonar-scanner.zip -d $HOME/.sonar/
-          echo "$HOME/.sonar/sonar-scanner-${{ env.SONAR_SCANNER_VERSION }}-linux/bin" >> $GITHUB_PATH
+
+          curl
+          --silent
+          --show-error
+          --location
+          --output $HOME/.sonar/sonar-scanner.zip
+          ${{ env.SONAR_SCANNER_DOWNLOAD_URL }}
+
+          unzip
+          -o $HOME/.sonar/sonar-scanner.zip
+          -d $HOME/.sonar/
+
+          echo "$HOME/.sonar/sonar-scanner-${{ env.SONAR_SCANNER_VERSION }}-linux/bin"
+          >> $GITHUB_PATH
 
       - name: Download and set up build-wrapper
         env:
           BUILD_WRAPPER_DOWNLOAD_URL: ${{ env.SONAR_SERVER_URL }}/static/cpp/build-wrapper-linux-x86.zip
-        run: |-
-          curl --silent --show-error --location --output $HOME/.sonar/build-wrapper-linux-x86.zip ${{ env.BUILD_WRAPPER_DOWNLOAD_URL }}
-          unzip -o $HOME/.sonar/build-wrapper-linux-x86.zip -d $HOME/.sonar/
-          echo "$HOME/.sonar/build-wrapper-linux-x86" >> $GITHUB_PATH
+        run: >-
+          curl
+          --silent
+          --show-error
+          --location
+          --output $HOME/.sonar/build-wrapper-linux-x86.zip
+          ${{ env.BUILD_WRAPPER_DOWNLOAD_URL }}
+
+          unzip
+          -o $HOME/.sonar/build-wrapper-linux-x86.zip
+          -d $HOME/.sonar/
+
+          echo "$HOME/.sonar/build-wrapper-linux-x86"
+          >> $GITHUB_PATH
 
       - name: Run build-wrapper
         run: >-
