--- a/.github/workflows/macos-build.yml
+++ b/.github/workflows/macos-build.yml
@@ -32,7 +32,8 @@ jobs:
             ${{ github.workspace }}/vcpkg
           key: >-
             ${{ runner.os }}-vcpkg-archives-cache-${{ hashFiles(
-              'vcpkg/CHANGELOG.md'
+              'vcpkg/ports/boost-test/vcpkg.json',
+              'vcpkg/ports/sdl2/vcpkg.json'
             ) }}
 
       - name: Bootstrap vcpkg
