ci(GitHub) Revise CI trigger configuration

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -2,7 +2,11 @@ name: CodeQL analysis
 
 on:
   pull_request:
+    branches:
+      - main
   push:
+    branches:
+      - main
   schedule:
     - cron: 10 22 * * 5
   workflow_dispatch:
