--- a/.github/workflows/linux-build.yml
+++ b/.github/workflows/linux-build.yml
@@ -2,7 +2,11 @@ name: GNU Autotools build on Ubuntu
 
 on:
   pull_request:
+    branches:
+      - main
   push:
+    branches:
+      - main
   workflow_dispatch:
 
 permissions:
