--- a/.github/workflows/devskim-analysis.yml
+++ b/.github/workflows/devskim-analysis.yml
@@ -2,7 +2,11 @@ name: DevSkim analysis
 
 on:
   pull_request:
+    branches:
+      - main
   push:
+    branches:
+      - main
   schedule:
     - cron: 10 22 * * 3
   workflow_dispatch:
